# bookmarklets

./: .gitignore  README.md  pyproject.toml
bookmarklets/: __main__.py
examples/: Comic Sans.js  bootstrap.js  comic_sans.js  confetti.js  hello.js  pink_links.js  slack_link.js
src/bookmarklets/: __main__.py  bookmarklet.py  metadata.py
