[tool.poetry]
name = "bookmarklets"
version = "0.1.0"
description = "Tool to develop bookmarklets"
authors = ["skarfie123 <rahulpai@rocketmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
typer = { extras = ["all"], version = "^0.9.0" }
fastapi = "^0.103.2"
uvicorn = { extras = ["standard"], version = "^0.23.2" }

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
pylama = "^8.4.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"

[tool.poetry.scripts]
bookmarklets = "bookmarklets.__main__:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.bandit]

[tool.pylint."messages control"]
disable = ["import-error"]
