[project]
name = "bookmarklets"
version = "0.3.2"
description = "Tool to develop bookmarklets"
authors = [{ name = "skarfie123", email = "rahulpai@rocketmail.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9.0,<0.10.0",
    "fastapi>=0.103.2,<0.104.0",
    "uvicorn[standard]>=0.23.2,<0.24.0",
]

[project.urls]
Repository = "https://github.com/skarfie123/bookmarklets"

[project.scripts]
bookmarklets = "bookmarklets.__main__:cli"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
pylama = "^8.4.1"
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.bandit]

[tool.pylint."messages control"]
disable = ["import-error", "line-too-long"]
